--- a/character_selection.html
+++ b/character_selection.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/intro.css">
+    <link rel="stylesheet" href="css/character_selection.css">
+
 </head>
 
 <body>
-    <button id="start-game-button">Start</button>
-    <script src="js/start.js" type="module"></script>
+    <div class="agents-container"></div>
+    <script src="js/character_selection.js" type="module"></script>
 </body>
 
 </html>
