--- a/weapon_selection.html
+++ b/weapon_selection.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/intro.css">
 </head>
 
 <body>
-    <button id="start-game-button">Start</button>
-    <script src="js/start.js" type="module"></script>
+    <div class="weapons-container"></div>
+    <script src="js/weapon_selection.js"></script>
 </body>
 
 </html>
