modified till character selection

--- a/character_selection.html
+++ b/character_selection.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="agents-container"></div>
-    <script src="js/character_selection.js" type="module"></script>
+    <script src="js/character_selection.js"></script>
 </body>
 
 </html>
