--- a/team_selection.html
+++ b/team_selection.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    <link rel="stylesheet" href="css/team_selection_style.css">
-
+    <link rel="stylesheet" href="css/team_selection.css">
 </head>
 
 <body>
     <div class="team-selection-container"></div>
+    <button id="auto-team-select-button">Auto Select</button>
     <script src="js/team_selection.js" type="module"></script>
 </body>
 
