--- a/weapon_selection.html
+++ b/weapon_selection.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/weapon_selection.css">
+
 </head>
 
 <body>
-    <div class="weapons-container"></div>
+    <div class="category-wrapper-container"></div>
+    <div class="weapon-wrapper-container"></div>
+    <div class="weapon-container"></div>
     <script src="js/weapon_selection.js"></script>
 </body>
 
