--- a/weapon_selection.html
+++ b/weapon_selection.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
+    <p id="balance"></p>
     <div class="category-wrapper-container"></div>
-    <div class="weapon-wrapper-container"></div>
-    <div class="weapon-container"></div>
+    <div class="weapons-section">
+        <div class="weapon-wrapper-container"></div>
+        <div class="weapon-container"></div>
+    </div>
     <script src="js/weapon_selection.js"></script>
 </body>
 
